# StarForge

./: .gitignore  API_REFERENCE.md  BUILD_BASELINE_VERIFICATION.md  CI_ENFORCEMENT.md  CODE_STYLE_STANDARDS.md  CONTRIBUTOR_QUICK_REFERENCE.md  Cargo.toml  DEVELOPER_GUIDE.md  DEVELOPMENT_WORKFLOW.md  FUZZING_GUIDE.md  GRAPHQL_ACCEPTANCE.md  GRAPHQL_GUIDE.md  GRAPHQL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MULTISIG_ACCEPTANCE.md  MULTISIG_BUILDER_GUIDE.md  README.md  REGISTRY_ACCEPTANCE_CRITERIA.md  REGISTRY_DEPLOYMENT_CHECKLIST.md  REMOTE_REGISTRY_IMPLEMENTATION.md  WASM_ACCEPTANCE.md  WASM_BUILD_GUIDE.md  WASM_IMPLEMENTATION_SUMMARY.md  build.rs  deny.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  fuzz.yml  registry-api.yml  release.yml
benches/: benchmarks.rs
crates/starforge-wasm/: Cargo.toml  README.md
crates/starforge-wasm/src/: lib.rs
docs/: COMMAND_REFERENCE.md
registry-api/: .env.example  Dockerfile  QUICK_START.md  README.md  TESTING.md  docker-compose.yml  package.json  tsconfig.json
registry-api/public/: index.html
registry-api/src/: index.ts
src/: graphql_server.rs  lib.rs  main.rs
src/commands/: analytics.rs  docs.rs  (+45 more)
templates/: registry.schema.json
tests/: cli_smoke.rs  config_migration_integration.rs  contract_property_tests.rs  contract_testing_automation.rs  deployment_error_handling.rs  deployment_monitoring.rs  deployment_orchestration.rs  deployment_preparation_e2e.rs  event_streaming.rs  hardware_wallet_integration.rs  network_simulation.rs  plugin_compatibility.rs  plugin_lifecycle_e2e.rs  security_hardening.rs  security_logging_audit.rs  security_monitoring.rs  state_migration_tools.rs  template_marketplace_comprehensive.rs  template_marketplace_test.rs  template_marketplace_workflows.rs  wallet_encryption_integration.rs  wallet_error_handling.rs  wallet_lifecycle_e2e.rs
wasm/: Cargo.toml  index.html  package.json
wasm/src/: lib.rs
(+81 files in other folders)
