[package]
name = "starforge-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly API surface for StarForge — browser-based Stellar wallet management"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/starforge"
keywords = ["stellar", "soroban", "wasm", "wallet", "web3"]

# `cdylib` is what `wasm-pack` consumes to emit the `.wasm` artifact; `rlib`
# keeps the crate usable as a normal Rust dependency and for native unit tests.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
ed25519-dalek = "=2.0.0"
stellar-strkey = "=0.0.9"
bip39 = { version = "2", features = ["rand", "std"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"

# Browser-backed config storage (localStorage).
[dependencies.web-sys]
version = "0.3"
features = ["Window", "Storage"]

# In the browser there is no OS entropy source, so `getrandom` (pulled in
# transitively by `rand`/`ed25519-dalek`) must be told to use the JS crypto API.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
